# Custom-Renderrer

./: CMakeLists.txt  Camera.cpp  Camera.h  DrawKit.cpp  DrawKit.h  FlatRandomColorShader.cpp  FlatRandomColorShader.h  IShader.h  MathTypes.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ShaderTypes.h  main.cpp  tgaimage.h
